# kube-resource-status

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
src/: kubernetes.rs  main.rs  utils.rs  utils_test.rs
