[package]
name = "resource-status"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive = "1.0.0"
k8s-openapi = { version = "0.17.0", features = ["v1_24"] }
kube = { version = "0.80.0", features = ["default"] }
tabled = "0.10.0"
tokio = { version = "1.27.0", features = ["full"] }
